--- a/raboApp/src/app/app.component.html
+++ b/raboApp/src/app/app.component.html
@@ -4,7 +4,7 @@
     <div class="col-md-6 fileInput">
         <div class="input-group">
             <div class="custom-file">
-              <input type="file" class="custom-file-input" id="inputGroupFile04" (change)="fileUpload($event.target.files)">
+              <input type="file" class="custom-file-input" id="inputGroupFile04" (change)="fileUpload($event)">
               <label class="custom-file-label" for="inputGroupFile04">Choose file</label>
             </div>
             <div class="input-group-append">
@@ -25,23 +25,11 @@
           </tr>
         </thead>
         <tbody>
-          <tr>
+          <tr *ngFor="let empTable of responseData">
             <th scope="row">1</th>
             <td>Mark</td>
             <td>Otto</td>
             <td>@mdo</td>
-          </tr>
-          <tr>
-            <th scope="row">2</th>
-            <td>Jacob</td>
-            <td>Thornton</td>
-            <td>@fat</td>
-          </tr>
-          <tr>
-            <th scope="row">3</th>
-            <td>Larry</td>
-            <td>the Bird</td>
-            <td>@twitter</td>
           </tr>
         </tbody>
       </table>
