--- a/raboApp/src/app/app.component.html
+++ b/raboApp/src/app/app.component.html
@@ -4,7 +4,7 @@
     <div class="col-md-6 fileInput">
         <div class="input-group">
             <div class="custom-file">
-              <input type="file" class="custom-file-input" id="inputGroupFile04" (change)="fileUpload($event)">
+              <input type="file" class="custom-file-input" id="inputGroupFile04" (change)="fileUpload($event)" multiple="false" accept="application/vnd.openxmlformats-officedocument.spreadsheetml.sheet">
               <label class="custom-file-label" for="inputGroupFile04">Choose file</label>
             </div>
             <div class="input-group-append">
